# test_libft

./: .gitmodules  CMakeLists.txt  a.out  main.c
bit_tests/: basic_check_bit.cpp
list_tests/: basic_check_list.cpp
unit_test/is_tests/: basic_check_is.cpp
