cmake_minimum_required(VERSION 3.5)
project(test_libft)

set(CMAKE_BUILD_TYPE Debug)

include_directories(unit_test_clion_init)
include_directories(libft libft/includes)

add_subdirectory(unit_test_clion_init)

set(SOURCE_FILES
        libft/includes/libft.h
        libft/srcs/bit/ft_printbit.c
        libft/srcs/bit/ft_reversebit.c
        libft/srcs/is/ft_isalnum.c
        libft/srcs/is/ft_isalpha.c
        libft/srcs/is/ft_isascii.c
        libft/srcs/is/ft_isdigit.c
        libft/srcs/is/ft_isprint.c
        libft/srcs/is/ft_islower.c
        libft/srcs/is/ft_isupper.c
        libft/srcs/list/ft_lstadd.c
        libft/srcs/list/ft_lstdel.c
        libft/srcs/list/ft_lstdelone.c
        libft/srcs/list/ft_lstiter.c
        libft/srcs/list/ft_lstmap.c
        libft/srcs/list/ft_lstnew.c
        libft/srcs/list/ft_lstd_new.c
        libft/srcs/list/ft_lstd_pushbefore_node.c
        libft/srcs/list/ft_lstprint.c
        libft/srcs/list/ft_lstpush_back.c
        libft/srcs/list/ft_lstpush_front.c
        libft/srcs/list/ft_lst_pushafter_node.c
        libft/srcs/list/ft_lstd_pushback.c
        libft/srcs/list/ft_lstd_print.c
        libft/srcs/list/ft_lstsize.c
        libft/srcs/list/ft_lstsplit.c
        libft/srcs/list/ft_lsttotab.c
        libft/srcs/mem/ft_bzero.c
        libft/srcs/mem/ft_memalloc.c
        libft/srcs/mem/ft_memccpy.c
        libft/srcs/mem/ft_memchr.c
        libft/srcs/mem/ft_memcmp.c
        libft/srcs/mem/ft_memcpy.c
        libft/srcs/mem/ft_memdel.c
        libft/srcs/mem/ft_memmove.c
        libft/srcs/mem/ft_memset.c
        libft/srcs/print/ft_putchar.c
        libft/srcs/print/ft_putchar_fd.c
        libft/srcs/print/ft_putendl.c
        libft/srcs/print/ft_putendl_fd.c
        libft/srcs/print/ft_putnbr.c
        libft/srcs/print/ft_putnbr_base.c
        libft/srcs/print/ft_putnbr_fd.c
        libft/srcs/print/ft_putstr.c
        libft/srcs/print/ft_putstr_fd.c
        libft/srcs/str/ft_atoi.c
        libft/srcs/str/ft_del_char.c
        libft/srcs/str/ft_itoa.c
        libft/srcs/str/ft_itoa_base.c
        libft/srcs/str/ft_ltoa.c
        libft/srcs/str/ft_strcat.c
        libft/srcs/str/ft_strchr.c
        libft/srcs/str/ft_strclr.c
        libft/srcs/str/ft_strcmp.c
        libft/srcs/str/ft_stradd_char.c
        libft/srcs/str/ft_strjoin_free_s1.c
        libft/srcs/str/ft_strcpy.c
        libft/srcs/tab/ft_free_tab.c
        libft/srcs/str/ft_strcpy_limit.c
        libft/srcs/str/ft_strdel.c
        libft/srcs/str/ft_strdup.c
        libft/srcs/str/ft_strequ.c
        libft/srcs/str/ft_striter.c
        libft/srcs/str/ft_striteri.c
        libft/srcs/str/ft_strjoin.c
        libft/srcs/str/ft_strjoin_free_s2.c
        libft/srcs/str/ft_strlcat.c
        libft/srcs/str/ft_strlen.c
        libft/srcs/str/ft_strlen_limit.c
        libft/srcs/str/ft_strmap.c
        libft/srcs/str/ft_strmapi.c
        libft/srcs/str/ft_strncat.c
        libft/srcs/str/ft_strncmp.c
        libft/srcs/str/ft_strncpy.c
        libft/srcs/str/ft_strndup.c
        libft/srcs/str/ft_strnequ.c
        libft/srcs/str/ft_strnew.c
        libft/srcs/str/ft_strnstr.c
        libft/srcs/str/ft_strrchr.c
        libft/srcs/str/ft_strsplit.c
        libft/srcs/str/ft_strstr.c
        libft/srcs/str/ft_strsub.c
        libft/srcs/str/ft_strtrim.c
        libft/srcs/str/ft_tolower.c
        libft/srcs/str/ft_toupper.c
        libft/srcs/tab/ft_tabjoin.c
        libft/srcs/tab/ft_tablen.c
        libft/srcs/get_next_line.c
        libft/srcs/str/ft_nblen.c
        libft/srcs/str/ft_atoi_base.c)


add_library(libft_lib SHARED libft/libft.a)